# prompting-benchmark

./: .gitignore  answers.json  app.py  data.json  generate_answers.py  generate_charts.py  pyproject.toml  scores.json
